# marmote

./: BreakoutBoardErrata.md  BreakoutBoardRequirement.md  EagleDesignGuide.md  EagleGerberExportGuide.md  EnclosureRequirement.md  Erratas.md  HighLevelSynthesisGuide.md  LiberoSimulationGuide.md  LiberoSourceControl.md  LinkCollection.md  M6RF315Requirement.md  MainBoardChangeLog.md  MainBoardDesignNotes.md  MainBoardErrata.md  MainBoardRequirement.md  PaperReferenceCollection.md  PowerBoardChangeLog.md  PowerBoardErrata.md  PowerBoardRequirement.md  ProjectHome.md  Publications.md  README.md  RadioBoardBaseBand.md  RadioBoardErrata.md  RadioBoardRequirement.md  RadioBoardTcxo.md  RepositoryManagementGuide.md  Requirements.md  RoadMap.md  StructuralHealthMonitoring.md  Teton.stp  TetonStreamingRequirement.md
apps/: bpsk_cdma_loopback.grc  bpsk_cdma_rx.grc  gmsk_txrx.grc
docs/: README.marmote
grc/: marmote_cdma_packet_framer.xml  marmote_gmsk_packet_framer_b.xml  marmote_mac_framer_b.xml  marmote_message_sink.xml  marmote_message_source.xml  marmote_pn_despreader.xml  marmote_pn_despreader_cc.xml  marmote_pn_matched_filter.xml  marmote_pn_synchronizer.xml  marmote_traffic_generator.xml
hardware/AE sensor supply/: AE PKWDI - opamp.asc  AE VS375-RIC - opamp.asc  AE_and_OpAmp.m  OpAmp_input_Z.m
hardware/BeaverBoard/: BeaverBoard.brd  BeaverBoard.lbr  BeaverBoard.sch  BeaverBoard_BOM.xls  BeaverBoard_bom.xls  eagle.epf
hardware/BeaverBoard_RevA/: BeaverBoard_BOM.xls  TODO.txt  eagle.epf
hardware/BreakoutBoard/: BreakoutBoard.brd  BreakoutBoard.lbr  BreakoutBoard.sch  BreakoutBoard_BOM.xlsx  Logo.lbr  eagle.epf
hardware/BreakoutBoard_RevB/: BreakoutBoard.sch  BreakoutBoard_RevB_BOM.xlsx  eagle.epf
hardware/CPSBoard/: CPSBoard.brd  CPSBoard.sch  eagle.epf
hardware/M6-RF315/: M6-RF315.brd  M6-RF315.lbr  M6-RF315.sch  M6-RF315_BOM.xlsx  M6RF-315.brd  M6RF-315.sch
hdl/: fifo_256x16.vhd  filter_rrc.vhd
lib/: binary_slicer_fi_impl.cc  binary_slicer_fi_impl.h  gmsk_packet_framer_b_impl.h  gmsk_packet_sink_b_impl.cc  mac_deframer_impl.cc  mac_deframer_impl.h  mseq_lfsr.cc  peak_tagger_cc_impl.cc  pn_despreader_cc_impl.h  pn_spreader_b_impl.h  pn_spreader_f_impl.cc  pn_synchronizer_cc_impl.h  pn_synchronizer_impl.cc  pn_synchronizer_impl.h
python/: CMakeLists.txt  __init__.py  qa_cdma_packet_framer.py  qa_cdma_packet_sink.py  qa_cdma_packet_source.py  qa_mac_deframer.py  qa_message_sink.py  qa_message_source.py  qa_pn_despreader_cc.py  qa_pn_spreader_f.py  qa_pn_synchronizer.py  qa_pn_synchronizer_cc.py
smartgen/: Teton_work.ixf
stimulus/: led_pwm_tb.vhd  tx_apb_if_tb.vhd
swig/: CMakeLists.txt  marmote_swig.i
tools/gr-marmote/grc/: CMakeLists.txt  marmote_binary_slicer_fi.xml  marmote_cdma_packet_sink.xml  marmote_cdma_packet_source.xml  marmote_ds_spreader_bb.xml  marmote_pn_despreader_cc.xml  marmote_pn_spreader_f.xml  marmote_pn_synchronizer.xml  marmote_pn_synchronizer_cc.xml  marmote_traffic_generator.xml
trunk/tools/ControlRecord/ControlRecord_GNUradio/GNUradio_blocks/gr-frame_source/lib/: CMakeLists.txt  frame_source_ss_impl.cc  frame_source_ss_impl.h  qa_frame_source.h  test_frame_source.cc
wiki/: BreakoutBoardErrata.wiki  BreakoutBoardRequirement.wiki  EagleDesignGuide.wiki  EagleGerberExportGuide.wiki  EnclosureRequirement.wiki  Erratas.wiki  HardwareDesignConclusion.wiki  HighLevelSynthesisGuide.wiki  LiberoSimulationGuide.wiki  LiberoSourceControl.wiki  LinkCollection.wiki  M6RF315Requirement.wiki  MainBoardChangeLog.wiki  MainBoardDesignNotes.wiki  MainBoardErrata.wiki  MainBoardRequirement.wiki  PaperReferenceCollection.wiki  PowerBoardChangeLog.wiki  PowerBoardErrata.wiki  PowerBoardRequirement.wiki  Publications.wiki  RadioBoardBaseBand.wiki  RadioBoardErrata.wiki  RadioBoardRequirement.wiki  RadioBoardTcxo.wiki  RepositoryManagementGuide.wiki  Requirements.wiki  Resources.wiki  RoadMap.wiki  StructuralHealthMonitoring.wiki  TetonStreamingRequirement.wiki
(+4883 files in other folders)
